[package]
name             = "nthash-rs"
version          = "0.1.2"
edition          = "2021"
description      = "Pure‑Rust port of ntHash"
license          = "MIT"
repository       = "https://github.com/haradama/nthash-rs"
documentation    = "https://docs.rs/nthash-rs"
homepage         = "https://github.com/haradama/nthash-rs"
keywords         = ["bioinformatics", "k-mer", "dna", "hash", "rolling-hash"]
categories       = ["science::bioinformatics::genomics", "science::bioinformatics::sequence-analysis"]
authors          = ["haradama <harada@sfc.wide.ad.jp>"]

[dependencies]
thiserror   = "2.0.12"

[dev-dependencies]
ahash = "0.8.12"
criterion = "0.5.1"
fnv = "1.0.7"
fxhash = "0.2.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
